--- a/config/snpp_edr.yml
+++ b/config/snpp_edr.yml
@@ -4,4 +4,4 @@ configs:
    options: "-z --alg='ALL'"
 limits:
   processor: 1
-env: /opt/cspp/EDR_2_0/cspp_edr_env.sh
+env: ${CSPP_EDR_HOME}/cspp_edr_env.sh"
