--- a/config/viirs_geotif.yml
+++ b/config/viirs_geotif.yml
@@ -2,6 +2,8 @@ configs:
   default: 
    options: "--adaptive-dnb"
    grid_file: "config/viirs_geotiff_grids.grd" 
+   igrid: "alaska_300"
+   mgrid: "alaska_600"
    polar2grid_driver: "viirs2gtiff.sh"
    atm_polar2grid_driver: "crefl2gtiff.sh"
 limits:
