--- a/config/viirs_gtm.yml
+++ b/config/viirs_gtm.yml
@@ -1,7 +1,7 @@
 configs:
   viirs:
-   driver: viirs_gtm.sh
-   options: "-z --alg='ALL'"
+   driver: viirs_gtm_edr.sh
+   options: "-z"
 limits:
   processor: 1
-env: ${CSPP_EDR_HOME}/cspp_gtm_env.sh
+env: ${CSPP_GTM_HOME}/cspp_gtm_env.sh
