--- a/config/terra_and_aqua_l1.yml
+++ b/config/terra_and_aqua_l1.yml
@@ -9,18 +9,20 @@ processing:
     - "[AT]*.L1B_QKM"
     - "[AT]*.GEO"
   t1:
-   l1_driver: "modis_L1A.py --startnudge=0 --stopnudge=0 "
+   l1_driver: "modis_L1A.py --startnudge=0 --stopnudge=0 --mission=T "
    geo_driver: "modis_GEO.py -v --threshold=80"
    l1b_driver: "modis_L1B.py"
-   destripe: "/opt/modis/destripe/run_modis_destripe.csh terra"
+   destripe: "run_modis_destripe.csh terra"
    pds: "*001.PDS"
    update_luts: "update_luts.py terra -v"
   a1:
-   l1_driver: "modis_L1A.py --startnudge=0 --stopnudge=0 "
-   geo_driver: "modis_GEO.py -a aqua_att -e aqua_eph --verbose --threshold=80 -n "
+   l1_driver: "modis_L1A.py --log --verbose --mission=A --startnudge=5 --stopnudge=5 "
+   geo_driver: "modis_GEO.py --log --verbose --enable-dem --disable-download -a aqua.att -e aqua.eph "
    l1b_driver: "modis_L1B.py"
-   destripe: "/opt/modis/destripe/run_modis_destripe.csh aqua"
-   gbad: "/opt/modis/gbad/wrapper/gbad/run aqua.gbad.pds P1540957*001.PDS aqua.gbad_eph aqua_eph aqua.gbad_att aqua_att"
+   destripe: "run_modis_destripe.csh aqua"
+   gbad_old: "/opt/modis/gbad/wrapper/gbad/run aqua.gbad.pds P1540957*001.PDS aqua.gbad_eph aqua_eph aqua.gbad_att aqua_att"
+   gbad: "touch configfile; aqua_main -packetfile P1540957*001.PDS -noradfile $GBADHOME/localdata/noradfile -attitudefile aqua.att -ephemerisfile aqua.eph -listconfig yes"
+   gbad_note: "touch configfile is stupid, but didn't want to clutter code with some random empty file makeing"
    pds: "P1540064*001.PDS"
    update_luts: "update_luts.py aqua -v"
 modis_tools_setup: "/opt/modis/setup.bash"
