Don't change the names without talking to the team first

--- a/config/terra_and_aqua_awips.yml
+++ b/config/terra_and_aqua_awips.yml
@@ -1,8 +1,8 @@
 driver: "$POLAR2GRID_HOME/bin/modis2awips.sh"
 driver_crefl: "$POLAR2GRID_HOME/bin/crefl2awips.sh"
 configs:
-  default: 
-   options: " "
+  default:
+   options: "--grid-coverage 0 "
    grid: 203
    save: "UAF*"
    p2g_config: "uaf_awips_backend.ini"
