--- a/config/dmsp_awips.yml
+++ b/config/dmsp_awips.yml
@@ -1,23 +1,36 @@
 terascan_driver: "/opt/terascan/pass/tscan.bash_profile"
 save:
-  - "*.dmdm"
-  - "*.ols"
-  - "*.mi_s"
-  - "*.t1_s"
-  - "*.t2_s"
+  - "unused"
 griding:
   opts: "master_var=master brute_force=no off_protect=no add_to_output=no include_vars=\\* poly_size=100 interpolate=nn whole_input=yes apply_scaling=yes"
   master: "Master_3752"
-scaling: 
-  imscale_opts: "fixed_size=no zoom_factor=1 real_resample=yes invert_scale=no north_up=yes include_vars=ols_visible bg_color=0 bad_color=0 over_color=0 max_width=20000 est_range=yes under_color=1 max_height=20000 image_colors=254"
-tscan_export:
-  command: "expgeotiff"
-  thermal_opts: "include_vars=ols_infrared sort_by_line=no apply_scaling=yes add_offset=0 force_unsigned=no trans_matrix=yes"
-  visible_opts: "include_vars=ols_visible sort_by_line=no apply_scaling=no add_offset=0 force_unsigned=no trans_matrix=yes"
+scaling:
+  visible: sqrt_stretch
+  thermal: awips_thermal_stretch
+export:
+  visible: "expgeotiff add_offset=0  sort_by_line=no sort_by_var=no apply_scaling=yes reverse_bytes=no trans_matrix=no"
+  thermal: "expgeotiff sort_by_line=no apply_scaling=yes add_offset= trans_matrix= force_unsigned= "
 awips_conversion:
   extents: " -4952960.856 -6857977.390 3431039.144 381022.610 "
-  proj: "'+proj=stere +lat_0=90 +lat_ts=60 +lon_0=-150 +k=1 +x_0=0 +y_0=0 +a=6371200 +b=6371200 +units=m +no_defs'" 
+  proj: "'+proj=stere +lat_0=90 +lat_ts=60 +lon_0=-150 +k=1 +x_0=0 +y_0=0 +a=6371200 +b=6371200 +units=m +no_defs'"
   warp_opts: "-tr 1000 1000 -rb"
-  vis_stretch: "gdal_contrast_stretch -valid-range 1..254 -linear-stretch 128 60 "
-gdal: 
+gdal:
   co_opts: "-co COMPRESS=DEFLATE -co TILED=YES -co TILED=YES"
+polar2grid:
+  env: "$POLAR2GRID_HOME/bin/polar2grid_env.sh"
+  grid: "$POLAR2GRID_HOME/ShellB3/lib/python2.7/site-packages/polar2grid-1.2.0-py2.7.egg/polar2grid/awips/ncml/grid203.ncml"
+bands:
+  visible:
+    - ols_visible 
+  thermal:
+    - ols_infrared
+awips:
+  naming:
+    ols_visible:
+      satllite_name: "DMSP"
+      channel: "0.75 um"
+      name: "visble"
+    ols_infrared:
+      satllite_name: "DMSP"
+      channel: "11.6 um"
+      name: "thermal"
