Replace carriage returns with newlines

--- a/config/uaf_awips_backend.ini
+++ b/config/uaf_awips_backend.ini
@@ -157,8 +157,8 @@ channel=3.7 um
 [awips:product:i05]
 channel=11.4 um
 
-;[awips:product:histogram_dnb]
-;channel=histogram DNB
+[awips:product:histogram_dnb]
+channel=histogram DNB
 
 [awips:product:adaptive_dnb]
 channel=adaptive DNB
@@ -185,12 +185,12 @@ channel=0.56 um
 ;same as I1
 channel=0.67 um
 
-;[awips:product:m06]
-;channel=0.75 um
+[awips:product:m06]
+channel=0.75 um
 
-;[awips:product:m07]
-# same as I2
-;channel=0.86 um
+[awips:product:m07]
+; same as I2
+channel=0.86 um
 
 ;[awips:product:m08]
 ;channel=1.2 um
@@ -198,16 +198,16 @@ channel=0.67 um
 [awips:product:m09]
 channel=1.4 um
 
-;[awips:product:m10]
-# same as I3
-;channel=1.6 um
+[awips:product:m10]
+; same as I3
+channel=1.6 um
 
 [awips:product:m11]
 channel=2.3 um
 
-;[awips:product:m12]
-# same as I4
-;channel=3.7 um
+[awips:product:m12]
+; same as I4
+channel=3.7 um
 
 [awips:product:m13]
 channel=4.0 um
@@ -354,6 +354,7 @@ channel=CR09
 [awips:product:viirs_crefl10]
 ; hi-res
 channel=CR10
+
 
 ; MODIS CREFL
 [awips:product:modis_crefl01_1000m]
