mods for modis awips, with new polar2grid, the 2.0 beta verison. @smacfarlane required if we want all the products to show up.
Signed-off-by: JC <jay@alaska.edu>

--- a/config/terra_and_aqua_awips.yml
+++ b/config/terra_and_aqua_awips.yml
@@ -4,7 +4,12 @@ configs:
   default:
    options: "--grid-coverage 0 "
    grid: 203
-   save: "UAF*"
+   save: 
+     - "UAF_AWIPS_terra_modis_vis0[123467]*"
+     - "UAF_AWIPS_terra_modis_bt2[03789]*"
+     - "UAF_AWIPS_terra_modis_bt3[012]*"
+     - "UAF_AWIPS_terra_modis_modis_crefl0[12346]*"
+   crefl_bands: " modis_crefl01_250m modis_crefl02_250m modis_crefl03_1000m modis_crefl04_1000m modis_crefl06_1000m "
    p2g_config: "uaf_awips_backend.ini"
 limits:
   processor: 2
