--- a/config/terra_and_aqua_awips.yml
+++ b/config/terra_and_aqua_awips.yml
@@ -9,6 +9,10 @@ configs:
      - "UAF_AWIPS_terra_modis_bt2[03789]*"
      - "UAF_AWIPS_terra_modis_bt3[012]*"
      - "UAF_AWIPS_terra_modis_modis_crefl0[12346]*"
+     - "UAF_AWIPS_aqua_modis_vis0[123467]*"
+     - "UAF_AWIPS_aqua_modis_bt2[03789]*"
+     - "UAF_AWIPS_aqua_modis_bt3[012]*"
+     - "UAF_AWIPS_aqua_modis_modis_crefl0[12346]*"
    crefl_bands: " modis_crefl01_250m modis_crefl02_250m modis_crefl03_1000m modis_crefl04_1000m modis_crefl06_1000m "
    p2g_config: "uaf_awips_backend.ini"
 limits:
