--- a/config/terra_and_aqua_awips.yml
+++ b/config/terra_and_aqua_awips.yml
@@ -2,13 +2,15 @@ driver: "$POLAR2GRID_HOME/bin/modis2awips.sh"
 driver_crefl: "$POLAR2GRID_HOME/bin/crefl2awips.sh"
 configs:
   default:
-   options: "--grid-coverage 0 "
+   options: "--grid-coverage 0"
    grid: 203
    save: 
      - "UAF_AWIPS_terra_modis_vis0[123467]*"
+     - "UAF_AWIPS_terra_modis_vis26*"
      - "UAF_AWIPS_terra_modis_bt2[03789]*"
      - "UAF_AWIPS_terra_modis_bt3[012]*"
      - "UAF_AWIPS_terra_modis_modis_crefl0[12346]*"
+     - "UAF_AWIPS_aqua_modis_vis26*"
      - "UAF_AWIPS_aqua_modis_vis0[123467]*"
      - "UAF_AWIPS_aqua_modis_bt2[03789]*"
      - "UAF_AWIPS_aqua_modis_bt3[012]*"
