--- a/config/mirs_awips.yml
+++ b/config/mirs_awips.yml
@@ -2,4 +2,6 @@ processing:
   atms: 
     save:
       - "*.nc"
-    driver: "mirs2awips.sh -g 203_10km --grid-coverage 0 -p mirs_rain_rate sea_ice snow_cover surface_type tpw"
+      - "*.nc.gz" 
+    driver: "mirs2awips.sh -g 203_10km --grid-coverage 0 -p mirs_rain_rate sea_ice snow_cover surface_type tpw mirs_btemp_02 mirs_btemp_16"
+    p2g_backend: "mirs_awips_backend.ini"
