--- a/config/viirs_edr.yml
+++ b/config/viirs_edr.yml
@@ -1,7 +1,7 @@
 configs:
   viirs:
    driver: viirs_edr.sh
-   options: "-z --alg='ALL'"
+   options: "-z --alg='VCM'"
 limits:
   processor: 1
 env: ${CSPP_EDR_HOME}/cspp_edr_env.sh
