--- a/config/uaf_awips_backend.ini
+++ b/config/uaf_awips_backend.ini
@@ -315,6 +315,9 @@ channel=NDVI
 [awips:product:tpw]
 channel=TPW
 
+[awips:product:swe]
+channel=SWE
+
 ; -- ACSPO Frontend Products --
 ; Uses the same as MODIS:
 ;[awips:product:sst]
