updates for noaa poes & p2g 2.1
Signed-off-by: JC <jc@alaska.edu>

--- a/config/mirs_awips.yml
+++ b/config/mirs_awips.yml
@@ -3,12 +3,12 @@ processing:
     save:
       - "*.nc"
       - "*.nc.gz" 
-    driver: "mirs2awips.sh -g 203_10km --grid-coverage 0 -p mirs_rain_rate sea_ice snow_cover tpw swe"
+    driver: "mirs2awips.sh -g 203_10km --grid-coverage 0 -p rain_rate sea_ice snow_cover tpw swe clw"
     p2g_backend: "mirs_awips_backend.ini"
   amsu:
     save:
       - "*.nc"
       - "*.nc.gz"
-    driver: "mirs2awips.sh -g 203_10km --grid-coverage 0 -p mirs_rain_rate sea_ice snow_cover tpw swe"
+    driver: "mirs2awips.sh -g 203_10km --grid-coverage 0 -p rain_rate sea_ice snow_cover tpw swe clw"
     p2g_backend: "mirs_awips_backend.ini"
 
