--- a/config/mirs_awips_backend.ini
+++ b/config/mirs_awips_backend.ini
@@ -131,6 +131,22 @@ dxKm=1.0159
 dyKm=-1.0159
 rotation=25.
 
+[awips:grid:210]
+depictor_name=grid210
+projName=MERCATOR
+projIndex=9
+lat00=26.422
+lon00=-77.0
+latNxNy=9.
+lonNxNy=-58.625
+centralLat=0.
+centralLon=-77.
+latDxDy=35.610
+lonDxDy=-77.
+dxKm=1.0
+dyKm=1.0
+rotation=0.
+
 ; -- Satellite Names (default is just the uppercase version of instrument name) --
 [awips:satellite:npp:viirs]
 satellite_name=VIIRS
@@ -315,9 +331,6 @@ channel=NDVI
 [awips:product:tpw]
 channel=TPW
 
-[awips:product:swe]
-channel=SWE
-
 ; -- ACSPO Frontend Products --
 ; Uses the same as MODIS:
 ;[awips:product:sst]
@@ -439,56 +452,104 @@ channel=Air temperature at 700mbar
 channel=Air temperature at 800mbar
 
 ; -- MIRS Frontend Products --
-[awips:product:mirs_btemp_90]
-channel=90 GHZ
+[awips:product:btemp_23v]
+channel=23 GHZ V
 
-[awips:product:mirs_rain_rate]
+[awips:product:btemp_31v]
+channel=31 GHZ V
+
+[awips:product:btemp_50h]
+channel=50 GHZ H
+
+[awips:product:btemp_51h]
+channel=51 GHZ H
+
+[awips:product:btemp_52h]
+channel=52 GHZ H
+
+[awips:product:btemp_53h]
+channel=53 GHZ H
+
+[awips:product:btemp_54h1]
+channel=54 GHZ H-1
+
+[awips:product:btemp_54h2]
+channel=54 GHZ H-2
+
+[awips:product:btemp_55h]
+channel=55 GHZ H
+
+[awips:product:btemp_57h1]
+channel=57 GHZ H-1
+
+[awips:product:btemp_57h2]
+channel=57 GHZ H-2
+
+[awips:product:btemp_57h3]
+channel=57 GHZ H-3
+
+[awips:product:btemp_57h4]
+channel=57 GHZ H-4
+
+[awips:product:btemp_57h5]
+channel=57 GHZ H-5
+
+[awips:product:btemp_57h6]
+channel=57 GHZ H-6
+
+[awips:product:btemp_88v]
+channel=88 GHZ V
+
+[awips:product:btemp_165h]
+channel=165 GHZ H
+
+[awips:product:btemp_183h1]
+channel=183 GHZ H-1
+
+[awips:product:btemp_183h2]
+channel=183 GHZ H-2
+
+[awips:product:btemp_183h3]
+channel=183 GHZ H-3
+
+[awips:product:btemp_183h4]
+channel=183 GHZ H-4
+
+[awips:product:btemp_183h5]
+channel=183 GHZ H-5
+
+; MIRS BTs - NOAA-18 - AMSU-A MHS
+; MIRS BTs - NOAA-19 - AMSU-A MHS
+; MIRS BTs - M1 (metopb) - AMSU-A MHS
+; MIRS BTs - M2 (metopa) - AMSU-A MHS
+[awips:product:btemp_50v]
+channel=50 GHZ V
+
+[awips:product:btemp_52v]
+channel=52 GHZ V
+
+[awips:product:btemp_54h]
+channel=54 GHZ H
+
+[awips:product:btemp_54v]
+channel=54 GHZ V
+
+[awips:product:btemp_89v1]
+channel=89 GHZ V-1
+
+[awips:product:btemp_89v2]
+channel=89 GHZ V-2
+
+; 157h on OPSO NOAA site
+[awips:product:btemp_157v]
+channel=157 GHZ V
+
+[awips:product:btemp_190v]
+channel=190 GHZ V
+
+[awips:product:rain_rate]
 channel=rain rate
 
-[awips:product:btemp_01]
-channel=1
-[awips:product:btemp_02]
-channel=2
-[awips:product:btemp_03]
-channel=3
-[awips:product:btemp_04]
-channel=4
-[awips:product:btemp_05]
-channel=5
-[awips:product:btemp_06]
-channel=6
-[awips:product:btemp_07]
-channel=7
-[awips:product:btemp_08]
-channel=8
-[awips:product:btemp_09]
-channel=9
-[awips:product:btemp_10]
-channel=10
-[awips:product:btemp_11]
-channel=11
-[awips:product:btemp_12]
-channel=12
-[awips:product:btemp_13]
-channel=13
-[awips:product:btemp_14]
-channel=14
-[awips:product:btemp_15]
-channel=15
-[awips:product:btemp_16]
-channel=16
-[awips:product:btemp_17]
-channel=17
-[awips:product:btemp_18]
-channel=18
-[awips:product:btemp_19]
-channel=19
-[awips:product:btemp_20]
-channel=20
-[awips:product:btemp_21]
-channel=21
-[awips:product:btemp_22]
-channel=22
 ; -- AVHRR Fronted Products --
 [awips:product:band1_vis]
 channel=0.63 um
@@ -513,6 +574,12 @@ channel=SnowCover
 
 [awips:product:sea_ice]
 channel=SeaIce
+
+[awips:product:swe]
+channel=SWE
+
+[awips:product:clw]
+channel=CLW
 
 [awips:product:btemp_36.5h]
 channel=36.5 GHz H
