Turned off compression - otherwise the nasa stuff just uncompresses the whole thing, taking forever.
Signed-off-by: JC <jc@alaska.edu>

--- a/config/nasa_sdr.yml
+++ b/config/nasa_sdr.yml
@@ -60,7 +60,8 @@ configs:
        location: /opt/drl/anc/leapsec/
        max_age: 2
        name: "leapsec"
-   options: "compress on"
+   options: "compress off"
+   options_note: "nasa tools will uncompress the data before using it, slowing things down"
    save: "*.h5"
    rdr_glob: "RNSCA-RVIRS*.h5"
 limits:
