--- a/config/acspo_geotif.yml
+++ b/config/acspo_geotif.yml
@@ -7,5 +7,13 @@ configs:
      - "acspo2gtiff.sh --grid-coverage 0.01 -p sst -g alaska_overview --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.tif"
     save:
      - "*.tif"
+  modis:
+    p2g_args: "--tiled --compress DEFLATE"
+    grid_file: "modis_geotiff_grids.grd"
+    tasks:
+     - "acspo2gtiff.sh --grid-coverage 0.01 -p sst -g alaska_500 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
+     - "acspo2gtiff.sh --grid-coverage 0.01 -p sst -g alaska_overview --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.tif"
+    save:
+     - "*.tif"
 limits:
   processor: 2
