--- a/config/awips_scmi.yml
+++ b/config/awips_scmi.yml
@@ -20,6 +20,41 @@ configs:
          bands: "viirs_crefl03 viirs_crefl04"
        ibands: 
          grid: polar_alaska_300
-         bands: "viirs_crefl08 viirs_crefl09 viirs_crefl10 "
+         bands: " modis_crefl01_250m modis_crefl02_250m modis_crefl03_1000m modis_crefl04_1000m modis_crefl06_1000m "
+  modis:
+   options: " --sector-id Polar --letters --compress --fix-awips --output-pattern 'UAF_AII_{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{begin_time:%Y%m%d_%H%M}.nc' "
+   save:
+     - "UAF_AII_*.nc"
+   p2g_config: "scmi_backend.ini"
+   p2g_grid: "scmi_grids.conf"
+   tasks:
+     modis:
+       qkm:
+         grid: polar_alaska_250
+         bands:  "vis01 vis02"
+       hkm:
+         grid: polar_alaska_500
+         bands: "vis03 vis04 vis05 vis06 vis07"
+       km:
+         grid: polar_alaska_1km
+         bands: "vis26 bt20 bt27 bt23 bt28 bt29 bt30 bt31 bt32"
+     crefl:
+       qkm:
+         grid: polar_alaska_250
+         bands: "modis_crefl01_250m modis_crefl02_250m"
+       hkm:
+         grid: polar_alaska_500
+         bands: "modis_crefl03_500m modis_crefl04_500m modis_crefl05_500m modis_crefl06_500m "
+  avhrr:
+    options: " --sector-id Polar --letters --compress --fix-awips --output-pattern 'UAF_AII_{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{begin_time:%Y%m%d_%H%M}.nc' "
+    save:
+     - "UAF_AII_*.nc"
+    p2g_config: "scmi_backend.ini"
+    p2g_grid: "scmi_grids.conf"
+    tasks:
+      avhrr:
+        qkm:
+          grid: polar_alaska_1km
+          bands:  "band1_vis band2_vis band3a_vis band3b_bt band4_bt band5_bt "
 limits:
   processor: 2
