--- a/config/scmi_grids.conf
+++ b/config/scmi_grids.conf
@@ -25,6 +25,8 @@ polar_russia,           proj4, +proj=stere +datum=WGS84 +ellps=WGS84 +lat_0=90 +
 polar_alaska,           proj4, +proj=stere +datum=WGS84 +ellps=WGS84 +lat_0=90 +lat_ts=60.0 +lon_0=-150 +units=m,         None,    None,          400,         -400,               None,              None
 polar_alaska_300,       proj4, +proj=stere +datum=WGS84 +ellps=WGS84 +lat_0=90 +lat_ts=60.0 +lon_0=-150 +units=m,         None,    None,          300,         -300,               None,              None
 polar_alaska_700,       proj4, +proj=stere +datum=WGS84 +ellps=WGS84 +lat_0=90 +lat_ts=60.0 +lon_0=-150 +units=m,         None,    None,          700,         -700,               None,              None
+polar_alaska_250,       proj4, +proj=stere +datum=WGS84 +ellps=WGS84 +lat_0=90 +lat_ts=60.0 +lon_0=-150 +units=m,         None,    None,          250,         -250,               None,              None
+polar_alaska_500,       proj4, +proj=stere +datum=WGS84 +ellps=WGS84 +lat_0=90 +lat_ts=60.0 +lon_0=-150 +units=m,         None,    None,          500,         -500,               None,              None
 polar_alaska_1km,       proj4, +proj=stere +datum=WGS84 +ellps=WGS84 +lat_0=90 +lat_ts=60.0 +lon_0=-150 +units=m,         None,    None,         1000,         -1000,              None,              None
 merc_conus_300,         proj4, +proj=merc +datum=WGS84 +ellps=WGS84 +lon_0=-95 +lat_0=0 +units=m +no_defs,                None,    None,          300,          -300,              None,              None
 merc_pacific_300,       proj4, +proj=merc +datum=WGS84 +ellps=WGS84 +lon_0=170 +lat_0=0 +units=m +no_defs,                None,    None,          300,          -300,              None,              None
