--- a/config/rtstps.yml
+++ b/config/rtstps.yml
@@ -2,4 +2,5 @@ configs:
   npp: "/opt/rt-stps/config/npp.xml"
   t1: "/opt/rt-stps/config/terra.xml"
   a1: "/opt/rt-stps/config/aqua.xml"
+  noaa20: "/opt/rt-stps/config/jpss1.xml"
 rtstps_driver: "/opt/rt-stps/bin/batch.sh"
