--- a/config/viirs_awips.yml
+++ b/config/viirs_awips.yml
@@ -2,18 +2,18 @@ driver: viirs2awips.sh
 driver_crefl: crefl2awips.sh
 configs:
   default:
-   options: "--grid-coverage 0"
+   options: "--grid-coverage 0 --source-name UAF --output-pattern \"UAF_AWIPS_{satellite}_{instrument}_{product_name}_{grid_name}_{begin_time}\" "
    day_cover: "0.10"
    grid: 203
    save: 
-     - "UAF_AWIPS_npp_viirs_adaptive*"
-     - "UAF_AWIPS_npp_viirs_dynamic_dnb*"
-     - "UAF_AWIPS_npp_viirs_i0[1-5]*"
-     - "UAF_AWIPS_npp_viirs_m0[3459]*"
-     - "UAF_AWIPS_npp_viirs_m1[13456]*"
-     - "UAF_AWIPS_npp_viirs_viirs_crefl0[3489]*"
-     - "UAF_AWIPS_npp_viirs_viirs_crefl10*" 
-     - "UAF_AWIPS_npp_viirs_ifog*"
+     - "UAF_AWIPS_*_viirs_adaptive*"
+     - "UAF_AWIPS_*_viirs_dynamic_dnb*"
+     - "UAF_AWIPS_*_viirs_i0[1-5]*"
+     - "UAF_AWIPS_*_viirs_m0[3459]*"
+     - "UAF_AWIPS_*_viirs_m1[13456]*"
+     - "UAF_AWIPS_*_viirs_viirs_crefl0[3489]*"
+     - "UAF_AWIPS_*_viirs_viirs_crefl10*" 
+     - "UAF_AWIPS_*_viirs_ifog*"
    p2g_config: "uaf_awips_backend.ini"
    crefl_bands: " viirs_crefl03 viirs_crefl04  viirs_crefl08 viirs_crefl09 viirs_crefl10 "
 limits:
