--- a/config/nucaps_l2.yml
+++ b/config/nucaps_l2.yml
@@ -5,5 +5,9 @@ configs:
    driver: "run_nucaps.bash -s npp -f 9 --noclean -d /opt/cspp/nucaps_anc -vv"
    save: 
      - "*.nc"
+  noaa20:
+    driver: "run_nucaps.bash -s j01 -f 9 --noclean -d /opt/cspp/nucaps_anc -vv"
+    save:
+      - "*.nc"
 limits:
   processor: 2
