changes for avhrr geotifs.
Signed-off-by: JC <jay@alaska.edu>

--- a/config/p2g_geotif.yml
+++ b/config/p2g_geotif.yml
@@ -23,5 +23,13 @@ configs:
     save:
      - "*.tif"
      - "*_modis_bt31_*_alaska_1000.png"
+  avhrr:
+    p2g_args: "--tiled --compress DEFLATE"
+    grid_file: "avhrr_geotiff_grids.grd"
+    tasks:
+     - "polar2grid.sh avhrr gtiff -g 203_1k --grid-coverage 0.08 -p 'band3b_bt band4_bt band5_bt' --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
+     - "polar2grid.sh avhrr gtiff -g 203_1k --grid-coverage 0.08 -p 'band1_vis band2_vis band3a_vis band3b_bt band4_bt band5_bt' "
+    save:
+     - "*.tif"
 limits:
   processor: 1
