--- a/config/feeder_geotif.yml
+++ b/config/feeder_geotif.yml
@@ -198,5 +198,93 @@ configs:
        b: "1_500"
        p: "1"
      name: "a1.%Y%m%d.%H%M_7_2_1_1"
+  metop-b:
+   mapper:
+     "1": '*_avhrr_band1_vis_*_203_1k.tif'
+     "2": '*_avhrr_band2_vis_*_203_1k.tif'
+     "3a": '*_avhrr_band3a_vis_*_203_1k.tif'
+     "3b": '*_avhrr_band3b_*_203_1k.tif'
+     "4": '*_avhrr_band4_bt_*_203_1k.tif'
+     "5": '*_avhrr_band5_bt_*_203_1k.tif'
+   single:
+     - title: thermal_5
+       band: "5"
+       name: "metop-b.%Y%m%d.%H%M_5"
+     - title: thermal_4
+       band: "4"
+       name: "metop-b.%Y%m%d.%H%M_4"
+   combinations:
+     - title: "321"
+       bands:
+         r: "3a"
+         g: "2"
+         b: "1"
+       name: "metop-b.%Y%m%d.%H%M_3a_2_1"
+  noaa19:
+   mapper:
+     "1": '*_avhrr_band1_vis_*_203_1k.tif'
+     "2": '*_avhrr_band2_vis_*_203_1k.tif'
+     "3a": '*_avhrr_band3a_vis_*_203_1k.tif'
+     "3b": '*_avhrr_band3b_*_203_1k.tif'
+     "4": '*_avhrr_band4_bt_*_203_1k.tif'
+     "5": '*_avhrr_band5_bt_*_203_1k.tif'
+   single:
+     - title: thermal_5
+       band: "5"
+       name: "noaa19.%Y%m%d.%H%M_5"
+     - title: thermal_4
+       band: "4"
+       name: "noaa19.%Y%m%d.%H%M_4"
+   combinations:
+     - title: "321"
+       bands:
+         r: "3a"
+         g: "2"
+         b: "1"
+       name: "noaa19.%Y%m%d.%H%M_3a_2_1"
+  noaa15:
+   mapper:
+     "1": '*_avhrr_band1_vis_*_203_1k.tif'
+     "2": '*_avhrr_band2_vis_*_203_1k.tif'
+     "3a": '*_avhrr_band3a_vis_*_203_1k.tif'
+     "3b": '*_avhrr_band3b_*_203_1k.tif'
+     "4": '*_avhrr_band4_bt_*_203_1k.tif'
+     "5": '*_avhrr_band5_bt_*_203_1k.tif'
+   single:
+     - title: thermal_5
+       band: "5"
+       name: "noaa15.%Y%m%d.%H%M_5"
+     - title: thermal_4
+       band: "4"
+       name: "noaa15.%Y%m%d.%H%M_4"
+   combinations:
+     - title: "321"
+       bands:
+         r: "3a"
+         g: "2"
+         b: "1"
+       name: "noaa15.%Y%m%d.%H%M_3a_2_1"
+  noaa18:
+   mapper:
+     "1": '*_avhrr_band1_vis_*_203_1k.tif'
+     "2": '*_avhrr_band2_vis_*_203_1k.tif'
+     "3a": '*_avhrr_band3a_vis_*_203_1k.tif'
+     "3b": '*_avhrr_band3b_*_203_1k.tif'
+     "4": '*_avhrr_band4_bt_*_203_1k.tif'
+     "5": '*_avhrr_band5_bt_*_203_1k.tif'
+   single:
+     - title: thermal_5
+       band: "5"
+       name: "noaa18.%Y%m%d.%H%M_5"
+     - title: thermal_4
+       band: "4"
+       name: "noaa18.%Y%m%d.%H%M_4"
+   combinations:
+     - title: "321"
+       bands:
+         r: "3a"
+         g: "2"
+         b: "1"
+       name: "noaa18.%Y%m%d.%H%M_3a_2_1"
 limits:
   processor: 1
