--- a/config/awips_scmi.yml
+++ b/config/awips_scmi.yml
@@ -13,7 +13,7 @@ configs:
          bands:  "i01 i02 i03 i04 i05"
        mbands:
          grid: polar_alaska_700
-         bands: "m03 m04 m05 m08 m09 m10 m11 m13 m14 m15 m16 dynamic_dnb dnb adaptive_dnb hncc_dnb"
+         bands: "m03 m04 m08 m09 m10 m11 m13 m14 m15 m16 dynamic_dnb dnb adaptive_dnb hncc_dnb"
      crefl:
        mbands:
          grid: polar_alaska_700
