Updating to work with new nucaps.
Signed-off-by: JC <jay@alaska.edu>

--- a/config/nucaps_sdr.yml
+++ b/config/nucaps_sdr.yml
@@ -1,7 +1,7 @@
 configs:
   nucaps:
     tasks:
-      - "snpp_sdr.rb -m cris "
+      - "snpp_sdr.rb -m cris -f "
       - "snpp_sdr.rb -m atms "
 limits:
   processor: 1
